Fix issue #19 (Unwanted break in date)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -292,8 +292,8 @@ table th {
 }
 
 .post-header .meta .date {
-    margin-right: 30px;
-    width: 64px;
+    margin-right: 19px;
+    width: 75px;
     text-align: center;
 }
 
